--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
-# testing
-/coverage
-
-# production
-/build
+# builds
+build
+dist
+.next
+.rpt2_cache
 
 # misc
+.idea
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
